--- a/src/main/resources/templates/html/class.html
+++ b/src/main/resources/templates/html/class.html
@@ -1,17 +1,128 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+<html lang="en"     >
+<head >
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <title>Class</title>
+    <!-- Latest compiled and minified CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Jquery & Ajax -->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script src="class.js"></script>
+    <style>
+        h1, #action {
+            text-align: center;
+        }
+
+        #action {
+            width: 30%;
+        }
+
+        table {
+            margin-top: 10px;
+        }
+
+        th {
+            width: 20%;
+        }
+
+        form {
+            text-align: center;
+        }
+
+        #search {
+            text-align: right;
+            float: right;
+        }
+
+        a {
+            text-decoration: none;
+            color: white;
+            font-weight: bold;
+        }
+
+        span {
+            color: white;
+            font-weight: bold;
+        }
+
+        button {
+            border: none;
+        }
+
+        a:hover {
+            color: white;
+        }
+
+        input {
+            border-radius: 4px;
+            width: 250px;
+        }
+    </style>
 </head>
 <body>
-<h1>List Class</h1>
-<div id="list"></div>
-<div id="form" style="display: none">
-<button onclick="getAllClass()">
+<div class="container">
+    <h1>List Class</h1>
+    <div class="row">
+        <div class="col-12">
+            //id modal
+            <button class="btn btn-primary" id="open-modal" onclick="openModal()"> Create New class
+            </button>
+            <button hidden id="test"  type="button" class="btn btn-primary"
+                    data-bs-toggle="modal" data-bs-target="#myModal">
+            </button>
+        </div>
+    </div>
+    <table class="table table-striped">
+        <tr>
+            <th>STT</th>
+            <th>Name</th>
+            <th>Name Semester</th>
+            <th id="action" colspan="2">Action</th>
+        </tr>
+        <tbody id="list-Class">
+        </tbody>
+    </table>
+</div>
+<!-- The Modal Create -->
+<div class="modal" id="myModal">
+    <div style="margin-left: 350px" class="modal-dialog">
+        <div style="width: 800px" class="modal-content">
+            <!-- Modal Header -->
+            <div class="modal-header">
+                <h4 class="modal-title" id="title">Create Class form</h4>
+            </div>
+            <!-- Modal body -->
+            <div class="modal-body">
+                <form method="post" id="dataClass">
+                    <table class="table table-striped">
+                        <tr id="idClass">
+                        </tr>
+                        <tr>
+                            <th>Name</th>
+                            <td><label><input type="text" id="name"></label></td>
+                        </tr>
+                        <tr>
 
-
+                            <td colspan="2">
+                                <button class="btn btn-primary" type="submit">
+                                    <span id="title-button" onclick="createClass()">Create</span>
+                                </button>
+                                <button type="button" class="btn btn-danger" data-bs-dismiss="modal">
+                                    <a>Close</a>
+                                </button>
+                            </td>
+                        </tr>
+                    </table>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+<div style="display: flex; justify-content: space-between; width: 90px">
+    <p style="color: black; ">Tên lớp</p><p style="color: red; display: flex">(*)</p>
+</div>
 </body>
-</html>
+<script src="main.js">
+</script>
